--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,30 @@ body {
   line-height: 21px;
 }
 
+.page-section {
+  margin: 200px 0;
+}
+
+.title {
+  font-family: "Balqis";
+  font-weight: 300;
+  font-size: 96px;
+  line-height: 128px;
+  color: #e2ab3f;
+}
+
+.title span {
+  font-family: "RobotoCondensed-LightItalic";
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 28px;
+  color: #000;
+  margin-bottom: 100px;
+  display: block;
+  margin-top: -25px;
+  margin-left: 185px;
+}
+
 a {
   color: inherit;
 }
@@ -53,6 +77,8 @@ a {
   margin: 0 auto;
   padding: 0 15px;
 }
+
+/* HEADER  */
 
 .header {
   background-image: url("../images/header-bg.jpg");
@@ -126,3 +152,77 @@ a {
   margin-top: -66px;
   margin-right: 88px;
 }
+
+/* HEADER  */
+
+/* Fairy Tail */
+
+.fairy-tail__slider {
+  width: 50%;
+}
+
+.slick-btn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 5;
+  cursor: pointer;
+  background-color: transparent;
+}
+
+.slick-btn:hover {
+  opacity: 0.5;
+}
+
+.slick-btn:focus {
+  outline: auto;
+}
+
+.slick-prev {
+  left: 0;
+}
+
+.slick-next {
+  right: 0;
+}
+
+.fairy-tail__inner {
+  position: relative;
+}
+
+.fairy-tail__container {
+  max-width: 1230px;
+  padding: 0 15px;
+  margin: 0 auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.fairy-tail__body {
+  width: 50%;
+  margin-left: auto;
+  padding-left: 55px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  height: 100%;
+}
+
+.fairy-tail__text {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 21px;
+
+  color: #000000;
+}
+
+.fairy-tail__body-title {
+  font-family: "RobotoCondensed-Regular";
+  font-size: 18px;
+  line-height: 21px;
+}
+
+/* Fairy Tail */
