--- a/css/style.css
+++ b/css/style.css
@@ -319,3 +319,38 @@ a {
 }
 
 /* Hotel */
+
+/* Price */
+
+.price__title span {
+  margin-left: 120px;
+}
+
+.price__inner {
+  display: flex;
+}
+
+.price__on-title,
+.price__off-title {
+  font-family: "RobotoCondensed-Regular";
+  font-size: 24px;
+  line-height: 28px;
+  margin-bottom: 50px;
+}
+
+.price__on {
+  margin-right: 70px;
+  width: 530px;
+}
+
+.price__list-item {
+  margin-bottom: 20px;
+}
+
+.price {
+  background-image: url("../images/price__images.png");
+  background-repeat: no-repeat;
+  background-position: center right;
+}
+
+/* Price */
