--- a/css/style.css
+++ b/css/style.css
@@ -453,3 +453,102 @@ input::placeholder {
 }
 
 /* contacts */
+
+/* footer  */
+
+.footer {
+  background-image: url("../images/footer__bg.jpg");
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  height: 100vh;
+  padding-top: 96px;
+}
+
+.footer__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer__text {
+  font-family: "Balqis";
+  font-weight: normal;
+  font-size: 86px;
+  line-height: 115px;
+}
+
+.footer__contacts {
+  width: 356px;
+  height: 527px;
+  background-image: url("../images/footer-contacts-bg.png");
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.footer__contacts-title {
+  padding-top: 50px;
+  margin-bottom: 50px;
+  font-family: "Balqis";
+  font-size: 86px;
+  line-height: 115px;
+
+  color: #e2ab3f;
+}
+
+.footer__phone,
+.footer__email {
+  display: inline-block;
+  padding-left: 40px;
+  position: relative;
+}
+
+.footer__phone::before,
+.footer__email::before {
+  content: "";
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  left: 0;
+  top: -5px;
+}
+
+.footer__phone:hover,
+.footer__phone:focus,
+.footer__email:hover,
+.footer__email:focus {
+  text-decoration: underline;
+}
+
+.footer__phone::before {
+  background-image: url("../images/footer-phone-icon.svg");
+  background-repeat: no-repeat;
+}
+
+.footer__email::before {
+  background-image: url("../images/footer-email-icon.svg");
+  background-repeat: no-repeat;
+}
+
+.footer__phone {
+  margin-bottom: 20px;
+}
+
+.footer__social {
+  margin-top: 38px;
+}
+
+.footer__social a {
+  margin: 0 7px;
+}
+
+.footer__social-link {
+  fill: #e2ab3f;
+  transition: 0.3s ease-in-out;
+}
+
+.footer__social-link:hover,
+.footer__social-link:focus {
+  fill: #c49539;
+}
+
+/* footer  */
