--- a/css/style.css
+++ b/css/style.css
@@ -557,6 +557,7 @@ input::placeholder {
 /* Adaptive */
 
 /* Header  */
+
 @media (max-width: 1240px) {
   .header__title {
     padding-top: 120px;
@@ -632,5 +633,58 @@ input::placeholder {
 }
 
 /* Header  */
+
+/* fairy-tail */
+
+@media (max-width: 960px) {
+  .page-section {
+    margin: 100px 0;
+  }
+  .fairy-tail__container,
+  .our-trip__container {
+    position: static;
+  }
+  .fairy-tail__slider {
+    width: 100%;
+  }
+  .fairy-tail__body {
+    margin-top: 20px;
+    width: 100%;
+    padding-left: 0;
+  }
+}
+@media (max-width: 585px) {
+  .fairy-tail__item img {
+    height: 50vh;
+    width: 100%;
+    object-fit: cover;
+  }
+  .page-section {
+    margin: 50px 0;
+  }
+  .title {
+    font-size: 60px;
+    line-height: 110px;
+    margin-bottom: 30px;
+  }
+  .title span {
+    margin-bottom: 30px;
+  }
+  .fairy-tail__title span {
+    margin-left: 135px;
+  }
+}
+
+@media (max-width: 380px) {
+  .title {
+    font-size: 50px;
+  }
+  .fairy-tail__title span {
+    margin-top: -35px;
+    font-size: 20px;
+    margin-left: 95px;
+  }
+}
+/* fairy-tail */
 
 /* Adaptive */
